--- a/.github/workflows/publish-prod-firefox.yml
+++ b/.github/workflows/publish-prod-firefox.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: rainbowbx-firefox-v${{ env.release_version }}
-          path: ./rainbowbx.xpi
+          path: build/
       - name: Submit to the firefox addons store
         uses: PlasmoHQ/bpp@v3.7.0
         with:
