--- a/package.json
+++ b/package.json
@@ -192,7 +192,7 @@
     "@types/validator": "13.7.12",
     "@typescript-eslint/eslint-plugin": "6.4.1",
     "@typescript-eslint/parser": "6.4.1",
-    "@vanilla-extract/vite-plugin": "3.6.1",
+    "@vanilla-extract/vite-plugin": "4.0.0",
     "@vanilla-extract/webpack-plugin": "2.2.0",
     "ansi-styles": "6.2.1",
     "audit-ci": "6.3.0",
@@ -267,7 +267,7 @@
     "socket.io-parser": "4.2.3",
     "tough-cookie": "4.1.3",
     "graphql": "16.8.1",
-    "vite": "5.2.14",
+    "vite": "5.4.12",
     "chai": "4.3.10",
     "supports-color": "5.5.0",
     "postcss": "8.4.31",
@@ -289,7 +289,8 @@
     "zod": "3.23.8",
     "rollup": "4.22.4",
     "cross-spawn": "6.0.6",
-    "nanoid": "3.3.8"
+    "nanoid": "3.3.8",
+    "undici": "5.28.5"
   },
   "lavamoat": {
     "allowScripts": {
