--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
     "react": "18.2.0",
     "react-beautiful-dnd": "13.1.1",
     "react-dom": "18.2.0",
+    "react-fast-compare": "3.2.2",
     "react-flatten-children": "1.1.2",
     "react-image": "4.1.0",
     "react-router-dom": "6.4.2",
@@ -166,7 +167,7 @@
     "viem": "2.21.55",
     "wagmi": "2.8.1",
     "word-wrap": "1.2.4",
-    "zustand": "4.1.5"
+    "zustand": "4.5.5"
   },
   "devDependencies": {
     "@foundry-rs/hardhat-anvil": "0.1.7",
