--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "react-router-dom": "6.4.2",
     "react-switch": "7.0.0",
     "socket.io-client": "4.5.3",
+    "use-deep-compare": "1.3.0",
     "validator": "13.9.0",
     "viem": "2.21.55",
     "wagmi": "2.8.1",
